# Car-Swiper

./: Car-Swiper.db  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: api-tests.yml
car-swiper/: package-lock.json  package.json
carswiper/: main.py  models.py  pyproject.toml
carswiper-pkg/: pyproject.toml
carswiper-pkg/src/carswiper_pkg/: __init__.py
carswiper/src/carswiper/: __init__.py  main.py
carswiper1/: pyproject.toml
carswiper1/carswiper1/: __init__.py  database.py
carswiper1/src/carswiper1/: __init__.py
my-project/: package-lock.json  package.json
my-project/app/: app.css
my-project/app/routes/: home.tsx
random/: __init__.py
src/carswiper/: __init__.py  database.py  main.py  models.py
src/carswiper/car-swiper-frontend/: package-lock.json  package.json
src/carswiper/car-swiper-frontend/app/: globals.css  home.css  initialpage.css  login.css  page.js
src/carswiper/car-swiper-frontend/app/dashboard/: dashboard.css  page.js
src/carswiper/car-swiper-frontend/app/login/: login.css  page.js
src/carswiper/car-swiper-frontend/app/register/: page.js  register.css
tests/: test_api.py
