[project]
name = "carswiper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Isaac Parker", email = "98621223+IsaacPrkr@users.noreply.github.com" },
]
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.3.0",
    "fastapi[all]>=0.115.12",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic[email]>=2.10.6",
    "pytest>=8.4.1",
    "python-jose[cryptography]>=3.4.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.39",
    "uvicorn>=0.34.0",
]

[project.scripts]
carswiper = "carswiper:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "bandit>=1.8.3",
    "mypy>=1.15.0",
    "ruff>=0.11.2",
]
