[project]
name = "carswiper-pkg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Isaac Parker", email = "98621223+IsaacPrkr@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
carswiper-pkg = "carswiper_pkg:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
