[project]
name = "carswiper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Isaac Parker", email = "98621223+IsaacPrkr@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
carswiper = "carswiper:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
