[project]
name = "carswiper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Isaac Parker", email = "98621223+IsaacPrkr@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "psycopg2>=2.9.10",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.39",
]

[project.scripts]
carswiper = "carswiper:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
